--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.5"
 
-install: "pip install -r requirements.txt"
+install:
+  - python setup.py install
 
 script: python tests/tests.py
