--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,14 @@
-alabaster==0.7.7
-Babel==2.2.0
-coverage==4.0.3
-dnspython==1.12.0
-docutils==0.12
-Flask==0.10.1
-Flask-Limiter==0.9.3
-flup==1.0.2
-imagesize==0.7.0
-ipaddr==2.1.11
-ipwhois==0.11.2
-itsdangerous==0.24
-Jinja2==2.8
-limits==1.1.1
-MarkupSafe==0.23
-netaddr==0.7.18
-pygeoip==0.3.2
-Pygments==2.1.3
-python-nmap==0.5.0.post1
-pythonwhois==2.4.3
-pytz==2016.3
-six==1.10.0
-snowballstemmer==1.2.1
-Sphinx==1.4
-sphinx-rtd-theme==0.1.9
-sphinxcontrib-httpdomain==1.4.0
-Werkzeug==0.11.4
+coverage
+dnspython
+Flask
+Flask-Limiter
+ipaddr
+ipwhois
+Jinja2
+netaddr
+pygeoip
+python-nmap
+pythonwhois
+Sphinx
+sphinx-rtd-theme
+sphinxcontrib-httpdomain
