--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-coverage
-dnspython
-Flask
-Flask-Limiter
-ipaddr
-ipwhois
-Jinja2
-netaddr
-pygeoip
-python-nmap
+coverage==5.1
+dnspython==1.16.0
+Flask==1.1.2
+Flask-Limiter==1.3.1
+ipaddr==2.2.0
+ipwhois==1.1.0
+Jinja2==2.11.2
+netaddr==0.7.19
+geoip2==3.0.0
+python-nmap==0.6.1
 pythonwhois
-Sphinx
-sphinx-rtd-theme
-sphinxcontrib-httpdomain
+pythonwhois==2.4.3
